# centarr

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.arm64v8  README.md
.github/workflows/: docker-arm64v8.yml  docker-publish-arm.yml  docker-publish.yml
src/: errors.rs  main.rs  sendfile.rs
