[package]
name = "centarr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.13"
hyper-static = "0.1.4"
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls", "stream", "gzip", "brotli"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.20.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["fs", "trace", "timeout"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
